# career-signal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  autopublish.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
agents/: __init__.py  base_agent.py  ingestion_agent.py  linkedin_agent.py  linkedin_content_agent.py  medium_agent.py  outreach_agent.py  publisher_agent.py  qa_judge_agent.py  strategist_agent.py  veille_agent.py
app/: __init__.py
app/api/: main.py  schemas.py
app/ui/: __init__.py
core/: __init__.py  client.py  config.py  memory.py
core/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
data/: app.db  veille_articles.json  veille_sources.json
docker/entrypoints/: api.sh  app.sh  worker.sh
docs/: README.md  architecture.md  database.md  devops.md  repo-structure.md
domain/content/: __init__.py
domain/jobs/: __init__.py
domain/networking/: __init__.py
domain/publishing/: __init__.py
domain/watch/: __init__.py
observability/: __init__.py  logging.py
orchestrator/: __init__.py  orchestrator.py
pipelines/: __init__.py  linkedin_autopublish_pipeline.py  linkedin_scheduling_pipeline.py  medium_pipeline.py  outreach_pipeline.py  veille_pipeline.py
services/: __init__.py
services/linkedin/: __init__.py
services/llm/: __init__.py
services/medium/: __init__.py
services/rss/: __init__.py
storage/: __init__.py  db.py  init_db.py
storage/migrations/: 0001_initial_schema.sql
tests/: test_agents.py  test_linkedin_autopublish.py  test_linkedin_scheduling.py  test_orchestrator.py  test_scheduler_tools.py
tests/api/: test_api.py
tools/: __init__.py  file_tools.py  linkedin_poster.py  linkedin_scraper.py  linkedin_tools.py  medium_tools.py  outreach_store.py  rss_fetcher.py  scheduler_tools.py  veille_store.py  web_tools.py
ui/: app.py
(+6 files in other folders)
